dnl configure.in: File used by autoconf to create the configure script
dnl
dnl Original Author: Matthew Campbell <mattcampbell@pobox.com>
dnl $Author: mattcampbell $
dnl $Date: 2000/10/18 21:27:01 $
dnl $Revision: 1.5 $

AC_INIT
AC_PREFIX_DEFAULT(/usr)
AM_INIT_AUTOMAKE(rmoo, 1.1)
AM_PATH_LISPDIR
AC_OUTPUT(Makefile)

dnl $Log: configure.in,v $
dnl Revision 1.5  2000/10/18 21:27:01  mattcampbell
dnl Updated my email address.
dnl
dnl Revision 1.4  2000/10/16 22:15:14  mattcamp
dnl Updated version to 1.1.
dnl
dnl Revision 1.3  2000/01/17 15:30:20  mattcamp
dnl Changed default prefix to /usr.
dnl
dnl Revision 1.2  1999/06/13 17:54:28  mattcamp
dnl Added a log to the bottom of the file.
dnl
